# junior-apogee-app

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  README.md  app.py  dashboard  dashboard.html  mkdocs.yml  pyproject.toml  requirements-lock.txt  requirements.txt  setup.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: agents.yaml  metrics.yaml  task_families.yaml
docs/: AGENT_PROFILES.md  EVALUATION_FRAMEWORK.md  GOVERNANCE.md  TEST_SUITE.md  index.md
junior_apogee_app/: __init__.py  __main__.py  agents.py  agents_example.py  audit.py  benchmark.py  cli.py  config_loader.py  errors.py  evaluation.py  evaluator.py  governance.py  llm.py  logging_config.py  metrics_backends.py  models.py  orchestrator.py  persistence.py  plugins.py  settings.py  web.py
scripts/: generate_report.py  generate_tasks.py  run_eval.py
src/junior_apogee/: __init__.py  cli.py  config.py  demo_data.py  models.py
src/junior_apogee/agents/: profiles.py
src/junior_apogee/evaluation/: engine.py
src/junior_apogee/governance/: checker.py
src/junior_apogee/metrics/: aggregator.py
src/junior_apogee/utils/: helpers.py
static/css/: dashboard.css
static/js/: dashboard.js
templates/: dashboard.html
tests/: __init__.py  conftest.py  test_agents_example.py  test_basic.py  test_cli_simulate.py  test_errors.py  test_evaluator.py  test_governance.py  test_metrics_backend.py  test_persistence.py  test_plugins.py  test_settings.py
tests/fixtures/: __init__.py  conftest.py
tests/integration/: test_evaluation_engine.py
tests/smoke/: test_cli.py  test_dashboard.py
tests/unit/: test_governance.py  test_layer_a_reasoning.py  test_layer_b_action.py  test_layer_c_outcomes.py  test_models.py
