[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "junior-apogee-app"
version = "0.1.0-beta"
description = "Production-ready AI agent evaluation and QA platform"
authors = [{name = "Ndr (Flickerflash)"}]
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=0.21.0",
    "requests>=2.31.0",
    "anthropic>=0.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "mypy>=1.4.0",
    "types-requests>=2.31.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[project.scripts]
junior-apogee-app = "junior_apogee_app.__init__:main"

